[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.9.0"
borsh = "0.9.3"
spl-governance = "4.0.0"
spl-governance-tools = "0.1.4"
spl-governance-addin-api = "0.1.4"
spl-token = "4.0.3"
solana-sdk = "2.1.7"
ed25519-dalek = "1.0.1"
rand = "0.8.3"
getrandom = "0.2.0"
thiserror = "1.0.0"

[lib]
crate-type = ["cdylib", "lib"]